@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 dee5fa08fc4e73b002e4046509b8184527a12cf2 ChangeLog
+SHA1 3bec76fa3760f88b14794ecaffaa294b471d15fd ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 f569696242d39c964b0fdc69afc92705dbd48a17 META.yml
+SHA1 c90ca08dfa1b0badb5462321f4adc18e54651174 META.yml
 SHA1 95d5816081b680da79bedb166c63ac225176f36a Makefile.PL
 SHA1 8b673061939e72411e4b717b9fd77b4954e33d70 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,17 +31,17 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 189c9c6e273cd1e00830b8786243d1191e400614 lib/Term/Menus.pm
+SHA1 048e1c36bfebbbcdf93130f66e2fa99e6d036635 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJR/xUAAAoJEBa/9Pad787EowAH/iJlM3PmRP3Iuu7E7O1UeJY/
-yckDaPaKHZnDvOfoTwuUYILwQZlbFItPChGSpJzVZrQUai0RBOQ+aH1zUIdmDxmZ
-GRL2pUvyjQMUn6KmanpXkoR2dEMmFjotOXe2W+u7fLS25wNFuw02N/3tBRsEtn/C
-G4ZJmjQgmmyH3VwnbDivJml2wHTkRs0JbQgN5EaB23mvDROBBc9H1a7rC6iLb6G5
-7nm2a4jKpWlNNx1h9XQ2fgZd3P+HlazDKPF0h6seorg4PFk6UanDELEgUk9SkqhZ
-HJ8F7IcGCTMiLkO2qq1c00kBw0WDAR5b+2nsi1qeOoF/po0xwdNoErRn4jVzmk0=
-=NLL/
+iQEcBAEBAgAGBQJSBvwXAAoJEBa/9Pad787ESPAIAJMPX3mGFet96/Ik2lkBbMqR
+UoExbO8IDcrkkPu7adilyJmbFX97j9yVe9TavStEhN2yRJzOcl2LmhCO1DNfGw9M
+OWMR0UdhunO1rS2FedulhhlQ7v6SwVFjWkxOmE+blsJ/2ySRj1OdEqMbElrtR4Vd
+o9HZDHFJF+0x+PmhXbC1jQ/10IP6XO0QBcKVDOYkc+IgQHUQ/7mM/SqzFBpRXj+Y
+OnMGltHdt+CDpNGuKUR29TJH3ghnHb0UtXiqcRVZLA9cQngqKe+RrQ+sgE29PRrX
+1Ixc45JYVwyJ4dQaEB62oInDGTt+iqPWGov//PyC4ADAyMFW17E6pYD3UTLRUds=
+=wSHw
 -----END PGP SIGNATURE-----
